Fix iOS overflow issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,7 +27,7 @@ a {
   overflow-x: hidden;
 }
 
-button {
+h1, h2, h3, h4, h5, h6, a, p, small, span, button {
   overflow-y: hidden;
 }
 
